--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bus-mj",
-  "version": "0.0.1",
+  "name": "bus-nakay",
+  "version": "0.2.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@capacitor/android": "^6.1.2",
+    "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.6.0",
     "@capacitor/haptics": "5.0.6",
